made tests less jdk dependent